Fix dark mode.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -257,6 +257,7 @@ h3 {
     font-weight: 600;
     text-align: center;
     text-transform: uppercase;
+    color: black;
 }
 
 .work img {
@@ -281,7 +282,7 @@ h3 {
     margin-bottom: 3em;
     padding-left: 1em;
 
-    border-color: white;
+    border-color: black;
     border-width: 3px;
     border-left-style: solid;
 }
@@ -294,14 +295,24 @@ a .project:hover {
     text-transform: uppercase;
     font-size: 150%;
     font-weight: 400;
-    color: white;
+    color: black;
 
     display: block;
     padding-bottom: 0.5em;
 }
 
+a .project p {
+    color: black;
+}
+
 a .project:hover h4 {
     color: #E95E2F;
+}
+
+.project p {
+    text-align: justify;
+    font-size: 120%;
+    font-weight: 350;
 }
 
 .work .nospacing {
@@ -342,10 +353,17 @@ a .project:hover h4 {
         background-color: black;
     }
 
+    .project {
+        border-color: white;
+    }
+
     h1,
     h3,
     h4,
-    p {
+    p,
+    .project h4,
+    a .project p,
+    .work h1 {
         color: white;
     }
 
